# LVT

./: .gitmodules  BERT.py  CMakeLists.txt  README.md  RENAME.sh  ffield.lut.1  figure_nonlinear.py  figure_nonlinear_predict.py  fix_submodules.sh  run_test_lvt.sh  table.txt  tiny_table.py  tool.py
bui/: log.txt
emp-aby/: BSGS.hpp  P2M.hpp  elgl_interface.hpp  emp-aby.h  he_interface.hpp  lut.h  lvt.h  lvt_batch.h  lvt_fake.h  lvt_share.hpp  mascot.hpp  spdz2k.hpp  tiny.hpp
libelgl/: CMakeLists.txt
libelgl/elgl/: BLS12381Element.cpp  BLS12381Element.h  Ciphertext.cpp  Ciphertext.h  ELGL_Key.cpp  ELGL_Key.h  FFT.cpp  FFT.h  FFT_Para_AccelerateCompatible.hpp  FFT_Para_Optimized.hpp  Plaintext.cpp  Plaintext.h
libelgl/elgloffline/: Commit_proof.cpp  Commit_proof.h  Commit_prover.cpp  Commit_prover.h  Commit_verifier.cpp  DistKeyGen.cpp.bak  Exp_proof.cpp  Exp_proof.h  Exp_prover.cpp  Exp_prover.h  Exp_verifier.cpp  Exp_verifier.h  Range_Proof.cpp  Range_Proof.h  Range_Prover.cpp  Range_Prover.h  Range_Verifier.cpp  Range_Verifier.h  RotationProof.cpp  RotationProof.h  RotationProver.cpp  RotationProver.h  RotationVerifier.cpp  RotationVerifier.h  Schnorr_Proof.h  Schnorr_Prover.cpp  Schnorr_Prover.h  Schnorr_Verifier.cpp  Schnorr_Verifier.h  ZKP_Enc_Proof.cpp  ZKP_Enc_Proof.h  ZKP_Enc_Prover.cpp  ZKP_Enc_Prover.h  ZKP_Enc_Verifier.cpp  ZKP_Enc_Verifier.h
libelgl/elgloffline/beifen/: Range_Prover.cpp.bak.cpp  Range_Verifier.cpp.bak.cpp
sh_test/: run_A2L_mascot.py  run_A2L_spdz2k.py  run_L2A_mascot.py  run_L2A_spdz2k.py  run_a2ao_batch.py  run_a2ao_mascot.py  run_a2ao_spdz2k.py  run_ao2a_batch.py  run_ao2a_mascot.py  run_ao2a_spdz2k.py
test/: CMakeLists.txt  a2ao.cpp  a2ao_mascot.cpp  a2ao_spdz2k.cpp  a_b2a.cpp  ao2a.cpp  ao2a_mascot.cpp  ao2a_spdz2k.cpp  b2a_input.txt  b2a_output.txt  calPoint.cpp  gp.cpp  (+7 more)
testProof/: CMakeLists.txt  ELGL_FFT-example.cpp  FFT_Paral.cpp  Point-test.cpp  Proof_Exp-example.cpp  Range-example.cpp  Range-example.cpp.bak  Rotate_proof-example.cpp  Schnorrproof-example.cpp  elgl.cpp  proof-example.cpp  proof_commit-example.cpp
(+193 files in other folders)
